docs: Added new page and menu link for "Testing Apps for Auto".
Moved DHU contents from Tools location to the new "Testing for Auto"
location.

Bug:23587345
Change-Id: I70aa09fc1073f0801b1e69959fe39cf01558546e

Former-commit-id: eb41bc08e118f257e83640aff95f80058e40ee21

--- a/docs/html/_redirects.yaml
+++ b/docs/html/_redirects.yaml
@@ -947,6 +947,8 @@ redirects:
   to: /studio/command-line/bmgr.html
 - from: /tools/help/draw9patch.html
   to: /studio/write/draw9patch.html
+- from: /tools/help/desktop-head-unit.html
+  to: /training/auto/testing/index.html
 - from: /tools/help/emulator.html
   to: /studio/run/emulator-commandline.html
 - from: /tools/help/etc1tool.html
