--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -2884,6 +2884,18 @@
     <permission android:name="android.permission.DISPATCH_PROVISIONING_MESSAGE"
                 android:protectionLevel="signature|privileged" />
 
+    <!-- Allows the holder to read blocked numbers. See
+         {@link android.provider.BlockedNumberContract}.
+         @hide -->
+    <permission android:name="android.permission.READ_BLOCKED_NUMBERS"
+                android:protectionLevel="signature" />
+
+    <!-- Allows the holder to write blocked numbers. See
+         {@link android.provider.BlockedNumberContract}.
+         @hide -->
+    <permission android:name="android.permission.WRITE_BLOCKED_NUMBERS"
+                android:protectionLevel="signature" />
+
     <application android:process="system"
                  android:persistent="true"
                  android:hasCode="false"
