Fix typo in filling ACTION_MANAGED_PROFILE_UNLOCKED extras.
Change-Id: Ic949a0d7f72d46d7cc36018b4b0fc54024c3b180

Former-commit-id: b5f0049f9841dfe877c070e4aba41516ed7df710

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -426,6 +426,7 @@
     <protected-broadcast android:name="android.intent.action.DYNAMIC_SENSOR_CHANGED" />
 
     <protected-broadcast android:name="android.intent.action.ACTION_RADIO_OFF" />
+    <protected-broadcast android:name="android.intent.action.MANAGED_PROFILE_UNLOCKED" />
 
     <!-- ====================================================================== -->
     <!--                          RUNTIME PERMISSIONS                           -->
