Update docs for DELETE_PACKAGES permission.
Bug: 28302564
Change-Id: I283b8a5490a189fc90f64aec3278b87a430c2623

Former-commit-id: eaa6c6b540431ba17f887d456cc1721ccf30c855

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -2417,7 +2417,10 @@
         android:protectionLevel="signature|privileged" />
 
     <!-- @SystemApi Allows an application to delete packages.
-    <p>Not for use by third-party applications. -->
+         <p>Not for use by third-party applications.
+         <p>Starting in {@link android.os.Build.VERSION_CODES#N}, user confirmation is requested
+         when the application deleting the package is not the same application that installed the
+         package. -->
     <permission android:name="android.permission.DELETE_PACKAGES"
         android:protectionLevel="signature|privileged" />
 
