update redirects for /studio files for the restructure from this CL: https://critique.corp.google.com/#review/121726749
Change-Id: I2c06eb12267f11d69a1dbd6f1c96a7bf1ef4a61c

Former-commit-id: ab5bf95626850e97124b912ca2699fb164574186

--- a/docs/html/_redirects.yaml
+++ b/docs/html/_redirects.yaml
@@ -863,49 +863,266 @@ redirects:
 - from: /reference/com/google/...
   to: https://developers.google.com/android/reference/com/google/...
 
+
 # Files moved during the /studio restructure
 - from: /sdk/index.html
   to: /studio/index.html
 - from: /sdk/win-usb.html
-  to: /studio/guide/run/win-usb.html
+  to: /studio/run/win-usb.html
 - from: /sdk/terms.html
   to: /studio/terms.html
-- from: /sdk/installing/...
-  to: /studio/installing/...
-- from: /tools/studio/index.html
-  to: /studio/guide/index.html
+- from: /sdk/installing/create-project.html
+  to: /studio/projects/create-project.html
+- from: /sdk/installing/index.html
+  to: /studio/install.html
+- from: /sdk/installing/migrate.html
+  to: /studio/install.html
+- from: /sdk/installing/studio-layout.html
+  to: /studio/write/layout-editor.html
+- from: /tools/building/building-cmdline.html
+  to: /studio/build/building-cmdline.html
+- from: /tools/building/building-studio.html
+  to: /studio/run/index.html
+- from: /tools/building/configuring-gradle.html
+  to: /studio/build/build-variants.html
+- from: /tools/building/manifest-merge.html
+  to: /studio/build/manifest-merge.html
+- from: /tools/building/multidex.html
+  to: /studio/build/multidex.html
+- from: /tools/building/plugin-for-gradle.html
+  to: /studio/build/index.html
+- from: /tools/debugging/annotations.html
+  to: /studio/write/annotations.html
+- from: /tools/debugging/ddms.html
+  to: /studio/profile/ddms.html
+- from: /tools/debugging/debugging-log.html
+  to: /studio/debug/log.html
+- from: /tools/debugging/debugging-memory.html
+  to: /studio/profile/investigate-ram.html
+- from: /tools/debugging/debugging-studio.html
+  to: /studio/debug/index.html
+- from: /tools/debugging/debugging-tracing.html
+  to: /studio/profile/traceview.html
+- from: /tools/debugging/debugging-ui.html
+  to: /studio/profile/optimize-ui.html
+- from: /tools/debugging/improving-w-lint.html
+  to: /studio/write/lint.html
+- from: /tools/debugging/systrace.html
+  to: /studio/profile/systrace.html
+- from: /tools/device.html
+  to: /studio/run/device.html
+- from: /tools/devices/emulator.html
+  to: /studio/run/emulator.html
+- from: /tools/devices/managing-avds.html
+  to: /studio/run/managing-avds.html
+- from: /tools/extras/oem-usb.html
+  to: /studio/run/oem-usb.html
+- from: /tools/help/adb.html
+  to: /studio/command-line/adb.html
+- from: /tools/help/am-allocation.html
+  to: /studio/profile/am-allocation.html
+- from: /tools/help/am-basics.html
+  to: /studio/profile/am-basics.html
+- from: /tools/help/am-cpu.html
+  to: /studio/profile/am-cpu.html
+- from: /tools/help/am-gpu.html
+  to: /studio/profile/am-gpu.html
+- from: /tools/help/am-hprof.html
+  to: /studio/profile/am-hprof.html
+- from: /tools/help/am-logcat.html
+  to: /studio/debug/am-logcat.html
+- from: /tools/help/am-memory.html
+  to: /studio/profile/am-memory.html
+- from: /tools/help/am-methodtrace.html
+  to: /studio/profile/am-methodtrace.html
+- from: /tools/help/am-network.html
+  to: /studio/profile/am-network.html
+- from: /tools/help/am-screenshot.html
+  to: /studio/debug/am-screenshot.html
+- from: /tools/help/am-sysinfo.html
+  to: /studio/profile/am-sysinfo.html
+- from: /tools/help/am-video.html
+  to: /studio/debug/am-video.html
+- from: /tools/help/android-monitor.html
+  to: /studio/profile/android-monitor.html
+- from: /tools/help/app-link-indexing.html
+  to: /studio/write/app-link-indexing.html
+- from: /tools/help/bmgr.html
+  to: /studio/command-line/bmgr.html
+- from: /tools/help/draw9patch.html
+  to: /studio/write/draw9patch.html
+- from: /tools/help/emulator.html
+  to: /studio/run/emulator-commandline.html
+- from: /tools/help/etc1tool.html
+  to: /studio/command-line/etc1tool.html
+- from: /tools/help/gltracer.html
+  to: /studio/profile/gltracer.html
+- from: /tools/help/hierarchy-viewer.html
+  to: /studio/profile/hierarchy-viewer.html
+- from: /tools/help/image-asset-studio.html
+  to: /studio/write/image-asset-studio.html
+- from: /tools/help/index.html
+  to: /studio/command-line/index.html
+- from: /tools/help/jobb.html
+  to: /studio/command-line/jobb.html
+- from: /tools/help/logcat.html
+  to: /studio/command-line/logcat.html
+- from: /tools/help/mksdcard.html
+  to: /studio/command-line/mksdcard.html
+- from: /tools/help/monkey.html
+  to: /studio/test/monkey.html
+- from: /tools/help/MonkeyDevice.html
+  to: /studio/test/monkeyrunner/MonkeyDevice.html
+- from: /tools/help/MonkeyImage.html
+  to: /studio/test/monkeyrunner/MonkeyImage.html
+- from: /tools/help/monkeyrunner_concepts.html
+  to: /studio/test/monkeyrunner/index.html
+- from: /tools/help/MonkeyRunner.html
+  to: /studio/test/monkeyrunner/MonkeyRunner.html
+- from: /tools/help/proguard.html
+  to: /studio/build/shrink-code.html
+- from: /tools/help/sdk-manager.html
+  to: /studio/intro/update.html
+- from: /tools/help/shell.html
+  to: /studio/command-line/shell.html
+- from: /tools/help/sqlite3.html
+  to: /studio/command-line/sqlite3.html
+- from: /tools/help/systrace.html
+  to: /studio/profile/systrace-commandline.html
+- from: /tools/help/theme-editor.html
+  to: /studio/write/theme-editor.html
+- from: /tools/help/traceview.html
+  to: /studio/profile/traceview-commandline.html
+- from: /tools/help/translations-editor.html
+  to: /studio/write/translations-editor.html
+- from: /tools/help/uiautomator/Configurator.html
+  to: /studio/test/uiautomator/Configurator.html
+- from: /tools/help/uiautomator/IAutomationSupport.html
+  to: /studio/test/uiautomator/IAutomationSupport.html
+- from: /tools/help/uiautomator/index.html
+  to: /studio/test/uiautomator/index.html
+- from: /tools/help/uiautomator/UiAutomatorTestCase.html
+  to: /studio/test/uiautomator/UiAutomatorTestCase.html
+- from: /tools/help/uiautomator/UiCollection.html
+  to: /studio/test/uiautomator/UiCollection.html
+- from: /tools/help/uiautomator/UiDevice.html
+  to: /studio/test/uiautomator/UiDevice.html
+- from: /tools/help/uiautomator/UiObject.html
+  to: /studio/test/uiautomator/UiObject.html
+- from: /tools/help/uiautomator/UiObjectNotFoundException.html
+  to: /studio/test/uiautomator/UiObjectNotFoundException.html
+- from: /tools/help/uiautomator/UiScrollable.html
+  to: /studio/test/uiautomator/UiScrollable.html
+- from: /tools/help/uiautomator/UiSelector.html
+  to: /studio/test/uiautomator/UiSelector.html
+- from: /tools/help/uiautomator/UiWatcher.html
+  to: /studio/test/uiautomator/UiWatcher.html
+- from: /tools/help/vector-asset-studio.html
+  to: /studio/write/vector-asset-studio.html
+- from: /tools/help/zipalign.html
+  to: /studio/command-line/zipalign.html
+- from: /tools/performance/allocation-tracker/index.html
+  to: /studio/profile/allocation-tracker-walkthru.html
+- from: /tools/performance/batterystats-battery-historian/charts.html
+  to: /studio/profile/battery-historian-charts.html
+- from: /tools/performance/batterystats-battery-historian/index.html
+  to: /studio/profile/battery-historian.html
+- from: /tools/performance/debug-gpu-overdraw/index.html
+  to: /studio/profile/dev-options-overdraw.html
+- from: /tools/performance/heap-viewer/index.html
+  to: /studio/profile/heap-viewer-walkthru.html
+- from: /tools/performance/hierarchy-viewer/index.html
+  to: /studio/profile/hierarchy-viewer-walkthru.html
+- from: /tools/performance/hierarchy-viewer/profiling.html
+  to: /studio/profile/hierarchy-viewer-results-walkthru.html
+- from: /tools/performance/hierarchy-viewer/setup.html
+  to: /studio/profile/hierarchy-viewer-setup.html
+- from: /tools/performance/index.html
+  to: /studio/profile/index.html
+- from: /tools/performance/profile-gpu-rendering/index.html
+  to: /studio/profile/dev-options-rendering.html
+- from: /tools/performance/systrace/index.html
+  to: /studio/profile/systrace-walkthru.html
+- from: /tools/performance/traceview/index.html
+  to: /studio/profile/traceview-walkthru.html
+- from: /tools/projects/index.html
+  to: /studio/projects/index.html
+- from: /tools/projects/templates.html
+  to: /studio/projects/templates.html
+- from: /tools/publishing/app-signing.html
+  to: /studio/publish/app-signing.html
+- from: /tools/publishing/preparing.html
+  to: /studio/publish/preparing.html
+- from: /tools/publishing/publishing_overview.html
+  to: /studio/publish/index.html
+- from: /tools/publishing/versioning.html
+  to: /studio/publish/versioning.html
+- from: /tools/revisions/build-tools.html
+  to: /studio/releases/build-tools.html
+- from: /tools/revisions/gradle-plugin.html
+  to: /studio/releases/gradle-plugin.html
+- from: /tools/revisions/platforms.html
+  to: /studio/releases/platforms.html
+- from: /tools/revisions/studio.html
+  to: /studio/releases/index.html
+- from: /tools/sdk/tools-notes.html
+  to: /studio/releases/sdk-tools.html
+- from: /tools/studio/studio-config.html
+  to: /studio/intro/studio-config.html
+- from: /tools/testing/testing_android.html
+  to: /studio/test/index.html
+- from: /tools/testing/testing_otheride.html
+  to: /studio/test/command-line.html
+
+# Files moved out of studio
 - from: /tools/sdk/ndk/...
   to: /ndk/index.html
 - from: /tools/adk/...
   to: /adk/...
 
 # Removed files
-- from: /tools/help/android.html
-  to: /studio/tools/projects/index.html
-- from: /tools/help/hprof-conv.html
-  to: /studio/tools/debugging/debugging-memory.html
-- from: /tools/studio/code-tools.html
-  to: /studio/guide/write/index.html
-- from: /tools/studio/ui-tools.html
-  to: /studio/guide/write/index.html
-- from: /tools/help/avd-manager.html
-  to: /studio/tools/devices/managing-avds.html
-- from: /tools/devices/managing-avds-cmdline.html
-  to: /studio/tools/devices/managing-avds.html
-- from: /tools/projects/projects-cmdline.html
-  to: /studio/tools/revisions/studio.html
-- from: /tools/help/dmtracedump.html
-  to: /studio/tools/debugging/debugging-tracing.html
-- from: /tools/help/lint.html
-  to: /studio/tools/debugging/improving-w-lint.html
-- from: /tools/debugging/index.html
-  to: /studio/tools/debugging/debugging-studio.html
 - from: /tools/help/project-mgmt.html
-  to: /studio/tools/projects/index.html
+  to: /studio/projects/index.html
+- from: /tools/help/android.html
+  to: /studio/projects/index.html
+- from: /tools/help/hprof-conv.html
+  to: /studio/profile/investigate-ram.html
+- from: /tools/studio/code-tools.html
+  to: /studio/write/index.html
+- from: /tools/studio/ui-tools.html
+  to: /studio/write/index.html
+- from: /tools/help/avd-manager.html
+  to: /studio/run/managing-avds.html
+- from: /tools/devices/managing-avds-cmdline.html
+  to: /studio/run/managing-avds.html
+- from: /tools/projects/projects-cmdline.html
+  to: /studio/projects/index.html
+- from: /tools/help/dmtracedump.html
+  to: /studio/profile/traceview.html
+- from: /tools/help/lint.html
+  to: /studio/write/lint.html
+- from: /tools/debugging/index.html
+  to: /studio/debug/index.html
+- from: /tools/building/index.html
+  to: /studio/build/index.html
+- from: /sdk/installing/studio-build.html
+  to: /studio/build/index.html
+- from: /tools/studio/studio-features.html
+  to: /studio/features.html
+- from: /tools/studio/index.html
+  to: /studio/intro/index.html
+- from: /tools/studio/eclipse-transition-guide.html
+  to: /studio/intro/migrate.html
+- from: /tools/testing/index.html
+  to: /studio/test/index.html
+- from: /tools/testing/testing-tools.html
+  to: /studio/test/index.html
 
-# Handle the rest of the tool pages that moved into /studio
+
+# Just incase something was missed, go to intro page
 - from: /tools/...
-  to: /studio/tools/...
+  to: /studio/intro/index.html
+
 
 # Vanity urls
 - from: /background_optimizations
