--- a/docs/html/distribute/essentials/_book.yaml
+++ b/docs/html/distribute/essentials/_book.yaml
@@ -20,6 +20,9 @@ toc:
 - title: Auto App Quality
   path: /distribute/essentials/quality/auto.html
 
+- title: Building for Billions
+  path: /distribute/essentials/quality/billions.html
+
 - title: Launch Checklist
   path: /distribute/tools/launch-checklist.html
   path_attributes:
