docs: added "billions" doc in Distribute>Essentials
Adding building for billions guide to Distribute>Essentials section
covering content on building for low-bandwidth and low-cost.

Bug: 27643355
Change-Id: Icb5089fe5528265f4e00b9b9e390a6743c691549
(cherry picked from commit 0603d7582a997748d6c010897e0723f636a18711 [formerly a9884af1e630645b88589c2885f042afb333cfef])

Former-commit-id: 20fde769affa8ff76251814004b22efa9bb76e71

--- a/docs/html/distribute/essentials/_book.yaml
+++ b/docs/html/distribute/essentials/_book.yaml
@@ -18,6 +18,9 @@ toc:
 - title: Auto App Quality
   path: /distribute/essentials/quality/auto.html
 
+- title: Building for Billions
+  path: /distribute/essentials/quality/billions.html
+
 - title: Launch Checklist
   path: /distribute/tools/launch-checklist.html
   custom_link_attributes:
