--- a/docs/html/_redirects.yaml
+++ b/docs/html/_redirects.yaml
@@ -1128,7 +1128,7 @@ redirects:
 - from: /installing/studio-androidview.html
   to: /studio/projects/index.html
 - from: /installing/studio-tips.html
-  to: /studio/guide/guide-intro.html
+  to: /studio/intro/index.html
 - from: /tools/help/ddms.html
   to: /studio/profile/ddms.html
 - from: /tools/revisions/index.html
