Remove wear design pages redirecting to design/wear
Change-Id: I42e21357a68d51d634dc4499022722f2498d246a

Former-commit-id: 9654f2efda90d24c541553d44b45a47e21d53283

--- a/docs/html/_redirects.yaml
+++ b/docs/html/_redirects.yaml
@@ -837,10 +837,10 @@ redirects:
   to: /studio/run/index.html#instant-run
 - from: /reference/org/apache/http/...
   to: /about/versions/marshmallow/android-6.0-changes.html#behavior-apache-http-client
-- from: /shareables/
-  to: https://commondatastorage.googleapis.com/androiddevelopers/shareables/
-- from: /downloads/
-  to: https://commondatastorage.googleapis.com/androiddevelopers/
+- from: /shareables/...
+  to: https://commondatastorage.googleapis.com/androiddevelopers/shareables/...
+- from: /downloads/...
+  to: https://commondatastorage.googleapis.com/androiddevelopers/...
 
 # Redirects for the new [dac]/topic/libraries/ area
 
