correct the support library redirects to redirect whole path
Change-Id: I8335dd30ef2fb1273ef0b0069b2ae9acafd35ef6

Former-commit-id: e2d90179e18b4a73d5dd499bc22c98be408eb9b2

--- a/docs/html/_redirects.yaml
+++ b/docs/html/_redirects.yaml
@@ -844,14 +844,14 @@ redirects:
 
 # Redirects for the new [dac]/topic/libraries/ area
 
-- from: /tools/support-library
-  to: /topic/libraries/support-library
+- from: /tools/support-library/...
+  to: /topic/libraries/support-library/...
 
 - from: /tools/data-binding/...
-  to: /topic/libraries/data-binding
+  to: /topic/libraries/data-binding/index.html
 
-- from: /tools/testing-support-library
-  to: /topic/libraries/testing-support-library
+- from: /tools/testing-support-library/...
+  to: /topic/libraries/testing-support-library/...
 
 # GCM redirects
 - from: /reference/com/google/...
