Remove broken video embed.
Change-Id: I74ee6f4c35efb45ab78e3feff7c8e0b0c01f772f

Former-commit-id: 9f1aceb30a7942a314c199665e7a081395fd0657

--- a/docs/html/preview/_book.yaml
+++ b/docs/html/preview/_book.yaml
@@ -24,7 +24,7 @@ toc:
 - title: Support and Release Notes
   path: /preview/support.html
 
-- title: Set Up to Develop
+- title: Set Up the Preview
   path: /preview/setup-sdk.html
   path_attributes:
   - name: es-lang
