--- a/docs/html/wear/preview/_book.yaml
+++ b/docs/html/wear/preview/_book.yaml
@@ -14,6 +14,8 @@ toc:
     path: /wear/preview/features/complications.html
   - title: Wear Navigation and Actions
     path: /wear/preview/features/ui-nav-actions.html
+  - title: Bridging for Notifications
+    path: /wear/preview/features/bridger.html
 
 - title: Downloads
   path: /wear/preview/downloads.html
